--- a/frontend/index.html
+++ b/frontend/index.html
@@ -401,7 +401,7 @@
 
     <script>
         // ======== CONFIGURATION: UPDATE THIS TO YOUR API GATEWAY URL ========
-        const API_ENDPOINT = 'https://csdg8czp44.execute-api.eu-north-1.amazonaws.com/dev/files';
+        const API_ENDPOINT = 'https://<api-id>.execute-api.<region>.amazonaws.com/dev/files';
         // ====================================================================
         
         // Upload Functions
